# NanoTekSpice

./: Makefile  README.md
circuit-example/nts_advanced/: and-only.nts  xor-not.nts  (+1 more)
src/: AComponent.cpp  AComponent.hpp  ComponentFactory.cpp  ComponentFactory.hpp  IComponent.cpp  IComponent.hpp  main.cpp
tests/: CMakeLists.txt  FileAlreadyLinked.nts  FileInvalidLink.nts  FileInvalidType.nts  FileNoChipset.nts  FileValid.nts  TestXor.cpp  Tests4001.cpp  Tests4011.cpp  Tests4030.cpp  Tests4069.cpp  Tests4071.cpp  Tests4081.cpp  TestsAnd.cpp  TestsClock.cpp  TestsError.cpp  TestsErrorParser.cpp  TestsFalse.cpp  TestsInputs.cpp  TestsLogic.cpp  TestsNand.cpp  TestsNor.cpp  TestsNot.cpp  TestsOr.cpp  TestsOutput.cpp  TestsTrue.cpp  clean.sh  tester.sh
tests/test-invalid/: duplicate_component_name.nts  no_chipsets_in_circuit.nts  unkown_type.nts
tests/test-nts/: 4040-bool.nts  4040-no.nts  4071-bool.nts  4071-input.nts  4081-true-false.nts  4094-bool.nts  4094-input.nts  4514-bool.nts  4514-input.nts  69-bool.nts  69-input.nts  and-all.nts  and-false.nts  and-of-and.nts  and-true.nts  and.nts  and2.nts  clock.nts  example.nts  invalid-negative.nts  jonhson.nts  nand-bool.nts  nand.nts  not-weird.nts  xor-g.nts  xor-gbool.nts
tests/test-txt/: 4008-test.txt  4008-three.txt  4008-two.txt  404.txt  4094-test copy.txt  4094-test.txt  4514.txt  and-of-ands.txt  double-1.txt  double-2.txt  double-3.txt  double-4.txt  double-5.txt  double-flipflopallone.txt  jonhson.txt  logger-test.txt  out.txt  rom-test.txt
tests/txt-test/: 4001-test.Txt  clock-test.txt  logger-test.txt
(+74 files in other folders)
